--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,8 @@
 language: go
 
+env:
+  - GO111MODULE=on
+
 before_install:
   - go get github.com/mattn/goveralls
   - go get github.com/modocache/gover
